--- a/.dockerignore
+++ b/.dockerignore
@@ -1,60 +1,36 @@
-# Build stage
-FROM golang:1.21-alpine AS builder
+# Build artifacts
+build/
+dist/
+coverage/
+*.log
 
-# Install build dependencies
-RUN apk add --no-cache git ca-certificates tzdata
+# Development files
+.git/
+.gitignore
+README.md
+docs/
+examples/
 
-# Set working directory
-WORKDIR /app
+# Test files
+*_test.go
+test/
 
-# Copy go mod files
-COPY go.mod go.sum ./
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
 
-# Download dependencies
-RUN go mod download
+# OS files
+.DS_Store
+Thumbs.db
 
-# Copy source code
-COPY . .
+# Temporary files
+tmp/
+temp/
+*.tmp
 
-# Build the application
-RUN CGO_ENABLED=0 GOOS=linux go build \
-    -ldflags "-X main.version=docker -X main.buildTime=$(date -u '+%Y-%m-%d_%H:%M:%S') -X main.gitCommit=$(git rev-parse --short HEAD)" \
-    -a -installsuffix cgo \
-    -o tls-cert-monitor .
-
-# Final stage
-FROM alpine:latest
-
-# Install runtime dependencies
-RUN apk --no-cache add ca-certificates tzdata
-
-# Create non-root user
-RUN addgroup -g 1001 -S appgroup && \
-    adduser -u 1001 -S appuser -G appgroup
-
-# Set working directory
-WORKDIR /app
-
-# Copy binary from builder stage
-COPY --from=builder /app/tls-cert-monitor .
-
-# Copy configuration file
-COPY config.yaml .
-
-# Create directories with correct permissions
-RUN mkdir -p /app/cache /app/logs && \
-    chown -R appuser:appgroup /app
-
-# Switch to non-root user
-USER appuser
-
-# Expose port
-EXPOSE 3200
-
-# Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD wget --no-verbose --tries=1 --spider http://localhost:3200/healthz || exit 1
-
-# Run the application
-ENTRYPOINT ["./tls-cert-monitor"]
-CMD ["-config=config.yaml"]
+# Docker files
+Dockerfile*
+docker-compose*.yml
+.dockerignore
