--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,64 +1,61 @@
+version: "2"
+
 run:
   timeout: 5m
-  go: "1.21"
-  issues-exit-code: 1
   tests: true
 
 output:
   formats:
-    - format: colored-line-number
+    format: line-number
   print-issued-lines: true
   print-linter-name: true
+  sort-results: true
+  uniq-by-line: true
 
 linters:
   enable:
-    # Core linters (from your working config)
+    # Core linters
     - errcheck
-    - gosimple
     - govet
     - ineffassign
     - staticcheck
-    - typecheck
     - unused
-    - gofmt
-    - goimports
     - misspell
     - gocritic
     - gosec
     - revive
     - gocyclo
-    
-    # Additional valuable linters from original config
-    - bodyclose      # Checks whether HTTP response body is closed
-    - dogsled        # Checks for too many blank identifiers
-    - dupl           # Finds duplicate code
-    - goconst        # Finds repeated strings that could be constants
-    - nakedret       # Finds naked returns in long functions
-    - unparam        # Reports unused function parameters
-    - unconvert      # Unnecessary type conversions
-    - prealloc       # Finds slice declarations that could be preallocated
-    - noctx          # Finds HTTP requests without context.Context
-    
-    # Modern linters worth adding
-    - copyloopvar    # Replaces exportloopref for Go 1.22+
-    - nilerr         # Finds code returning nil even with non-nil error
-    - exhaustive     # Checks exhaustiveness of enum switch statements
-    - sqlclosecheck  # Checks that sql.Rows and sql.Stmt are closed
-    - tparallel      # Detects improper use of t.Parallel()
-    - errorlint      # Better error wrapping checks
-    - forcetypeassert # Enforces type assertions with ok check
-    - makezero       # Finds slice declarations with non-zero initial length
+
+    # Extra useful linters
+    - bodyclose
+    - dogsled
+    - dupl
+    - goconst
+    - nakedret
+    - unparam
+    - unconvert
+    - prealloc
+    - noctx
+
+    # Modern replacements & advanced linters
+    - copyloopvar
+    - nilerr
+    - exhaustive
+    - sqlclosecheck
+    - errorlint
+    - forcetypeassert
+    - makezero
+    - nolintlint
 
   disable:
-    # Potentially problematic linters
-    - mnd            # Magic numbers - too noisy (replaces deprecated gomnd)
-    - funlen         # Function length - use judiciously
-    - lll            # Line length - handled by formatter
-    - gochecknoinits # Init functions - sometimes necessary
-    - gochecknoglobals # Global variables - sometimes necessary
-    - wsl            # Whitespace linter - too opinionated
-    - nlreturn       # Newline before return - too opinionated
-    - testpackage    # Enforces _test package - not always desired
+    - mnd
+    - funlen
+    - lll
+    - gochecknoinits
+    - gochecknoglobals
+    - wsl
+    - nlreturn
+    - testpackage
 
 linters-settings:
   errcheck:
@@ -67,17 +64,16 @@ linters-settings:
     exclude-functions:
       - io.Copy
       - fmt.Fprint
-  
+
   govet:
     enable-all: true
-    # Shadow checking is now included in enable-all
-  
+
   gocyclo:
     min-complexity: 15
-  
+
   goimports:
     local-prefixes: github.com/brandonhon/tls-cert-monitor
-  
+
   gocritic:
     enabled-tags:
       - diagnostic
@@ -86,55 +82,55 @@ linters-settings:
       - performance
       - style
     disabled-checks:
-      - dupImport      # Duplicate imports handled by goimports
-      - ifElseChain    # Sometimes clearer than switch
-      - octalLiteral   # Octal literals are fine for file permissions
-      - whyNoLint      # Don't require explanations for nolint
-      - wrapperFunc    # Wrapper functions are sometimes necessary
-      - unnamedResult  # Allow unnamed results for simple functions
-      - hugeParam      # Large structs by value - context dependent
-      - rangeValCopy   # Sometimes intentional
-  
+      - dupImport
+      - ifElseChain
+      - octalLiteral
+      - whyNoLint
+      - wrapperFunc
+      - unnamedResult
+      - hugeParam
+      - rangeValCopy
+
   dupl:
-    threshold: 100  # Only flag substantial duplication
-  
+    threshold: 100
+
   goconst:
     min-len: 3
     min-occurrences: 3
-  
+
   misspell:
     locale: US
-  
+
   unused:
     check-exported: false
-  
+
   unparam:
     check-exported: false
-  
+
   nakedret:
     max-func-lines: 30
-  
+
   prealloc:
     simple: true
     range-loops: true
     for-loops: false
-  
+
   gosec:
     severity: medium
     confidence: medium
     excludes:
-      - G108  # Profiling endpoint automatically exposed
-      - G204  # Subprocess launched with variable
-      - G304  # File path provided as taint input
-      - G306  # Poor file permissions for non-sensitive files
-      - G404  # Weak random for non-crypto purposes
+      - G108
+      - G204
+      - G304
+      - G306
+      - G404
     config:
       G306:
         allowed_permissions:
           - "0644"
           - "0755"
           - "0600"
-  
+
   revive:
     confidence: 0.8
     severity: warning
@@ -157,98 +153,84 @@ linters-settings:
       - name: time-naming
       - name: unexported-return
       - name: indent-error-flow
-      - name: errorf
-  
+
   nolintlint:
     allow-unused: false
     allow-leading-space: false
-    require-explanation: false  # Set to true for stricter control
+    require-explanation: false
     require-specific: true
-  
+
   exhaustive:
     default-signifies-exhaustive: true
-  
+
   errorlint:
     errorf: true
     asserts: true
     comparison: true
 
 issues:
+  issues-exit-code: 1
   max-issues-per-linter: 0
   max-same-issues: 0
   new: false
-  uniq-by-line: false  # Don't deduplicate issues on same lines
-  
-  # Exclude specific directories and files
+  uniq-by-line: true
   exclude-dirs:
     - vendor
     - build
     - dist
-  
   exclude-files:
-    - ".*\\.pb\\.go$"  # Skip protobuf generated files
-    - ".*_generated\\.go$"  # Skip other generated files
-  
+    - ".*\\.pb\\.go$"
+    - ".*_generated\\.go$"
   exclude-rules:
-    # Test files - relax some rules
     - path: _test\.go
       linters:
-        - mnd           # Magic numbers fine in tests (replaces gomnd)
-        - funlen        # Test functions can be long
-        - goconst       # Repeated strings fine in tests
-        - gosec         # Security checks less critical in tests
-        - dupl          # Test code duplication is acceptable
-        - errorlint     # Error handling can be simpler in tests
-        - forcetypeassert # Type assertions without checks OK in tests
-    
-    # Main function - can be longer
+        - mnd
+        - funlen
+        - goconst
+        - gosec
+        - dupl
+        - errorlint
+        - forcetypeassert
+
     - path: main\.go
       linters:
         - funlen
         - gocyclo
-    
-    # Generated files
+
     - path: .*\.gen\.go
       linters:
         - gosec
         - errcheck
         - dupl
         - goconst
-    
-    # Specific exclusions for your project
+
     - path: internal/scanner/scanner\.go
       text: "cyclomatic complexity"
       linters:
         - gocyclo
-    
-    # Common false positives
+
     - text: "weak cryptographic primitive"
       linters:
         - gosec
-    
-    - text: "G115:"  # Integer overflow - often false positive
+
+    - text: "G115:"
       linters:
         - gosec
-    
-    - text: "SA1019:"  # Deprecated function usage
+
+    - text: "SA1019:"
       linters:
         - staticcheck
-  
-  # Exclude some default exclusions
+
   exclude-use-default: false
-  
-  # Custom exclude patterns
   exclude:
     - "^.*Generated.*$"
     - "^.*\\.pb\\.go.*$"
 
-severity:
-  default-severity: error
-  case-sensitive: false
-  rules:
-    - linters:
-        - dupl
-      severity: info
-    - linters:
-        - goconst
-      severity: warning
+severity-rules:
+  - linters:
+      - dupl
+    severity: info
+  - linters:
+      - goconst
+    severity: warning
+
