feat: add directory exclusion and hostname metrics
- Add exclude_directories config option to skip specific paths during scanning
- Add ssl_cert_monitor_hostname_info metric for multi-node identification
- Fix logger sync error handling for stdout/stderr
- Update scanner to respect exclusion rules in file watching
- Add comprehensive tests for both features
- Update documentation and examples

Fixes gosec G115 integer overflow warnings in health checks

--- a/docker/docker.config.yaml
+++ b/docker/docker.config.yaml
@@ -13,6 +13,15 @@ certificate_directories:
   - "/app/certs"
   # Add more directories as needed
 
+# Directories to exclude from scanning (optional)
+# These paths will be skipped even if they are within certificate_directories
+exclude_directories:
+  - "/app/certs/old"
+  - "/app/certs/new"
+  - "/app/certs/working"
+  - "/app/certs/.git"
+  # Add any subdirectories you want to exclude
+
 # Scan interval (how often to scan for certificates)
 scan_interval: "5m"
 
