--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,7 @@ coverage.xml
 .hypothesis/
 .pytest_cache/
 cover/
+bandit-report.json
 
 # Translations
 *.mo
@@ -188,6 +189,7 @@ Thumbs.db
 *.swo
 *~
 .vscode/
+*.backup
 
 # Local development
 local/
