--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,13 +10,13 @@ services:
       - ./docker/logs:/app/logs:rw
       - ./docker/cache:/app/cache:rw
       # Mount certificate directories for monitoring
-      - $PWD/test/fixtures/certs:/app/certs
+      - ./tests/fixtures/certs:/app/certs
     environment:
-      - TLS_MONITOR_LOG_LEVEL=info
+      - TLS_MONITOR_LOG_LEVEL=INFO
       - TLS_MONITOR_HOT_RELOAD=true
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3200/healthz"]
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--method=GET", "-O", "/dev/null", "http://localhost:3200/healthz"]
       interval: 30s
       timeout: 10s
       retries: 3
