--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -228,53 +228,15 @@ jobs:
     name: Build Linux Binary (ARM64)
     runs-on: ubuntu-latest
     needs: test
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/'))
+    if: false # Disabled
     
     steps:
     - uses: actions/checkout@v4
     
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-    
-    - name: Build Linux ARM64 binary
+    - name: Skip Linux ARM64 build
       run: |
-        echo "Building Linux ARM64 binary using Docker buildx cross-compilation..."
-        mkdir -p dist
-        
-        # Use buildx with output to extract the /app/dist directory from the container
-        docker buildx build -f build/Dockerfile.linux \
-          --platform linux/arm64 \
-          --build-arg USER_ID=$(id -u) \
-          --build-arg GROUP_ID=$(id -g) \
-          --output type=local,dest=./output \
-          .
-        
-        # Extract the binary from the container's /app/dist directory
-        echo "Checking output structure..."
-        find output/ -name "tls-cert-monitor" -type f | head -5
-        
-        if [ -f "output/app/dist/tls-cert-monitor" ]; then
-          cp output/app/dist/tls-cert-monitor dist/tls-cert-monitor
-          chmod +x dist/tls-cert-monitor
-          echo "ARM64 binary extracted successfully"
-        else
-          echo "Error: ARM64 binary not found in expected location"
-          echo "Contents of output/:"
-          find output/ -type f | head -20
-          exit 1
-        fi
-        
-        # Verify binary
-        ls -la dist/
-        file dist/tls-cert-monitor
-        ls -lh dist/tls-cert-monitor
-    
-    - name: Upload Linux ARM64 binary
-      uses: actions/upload-artifact@v4
-      with:
-        name: linux-arm64-binary
-        path: dist/tls-cert-monitor
-        retention-days: 30
+        echo "Linux ARM64 builds are not supported yet."
+        exit 0
 
   build-windows-arm64:
     name: Build Windows Binary (ARM64)
@@ -349,7 +311,7 @@ jobs:
   release:
     name: Create Release
     runs-on: ubuntu-latest
-    needs: [build-linux-amd64, build-linux-arm64, build-windows-amd64, build-macos-amd64, build-macos-arm64]
+    needs: [build-linux-amd64, build-windows-amd64, build-macos-amd64, build-macos-arm64]
     permissions:
       contents: write
     if: |
@@ -392,12 +354,8 @@ jobs:
           rm tls-cert-monitor
         fi
         
-        # Linux ARM64
-        if [ -f "linux-arm64-binary/tls-cert-monitor" ]; then
-          cp linux-arm64-binary/tls-cert-monitor ./tls-cert-monitor
-          tar -czf linux-arm64.tar.gz tls-cert-monitor
-          rm tls-cert-monitor
-        fi
+        # Linux ARM64 - Disabled
+        # No support yes
         
         # Windows AMD64
         if [ -f "windows-amd64-binary/tls-cert-monitor.exe" ]; then
@@ -455,7 +413,7 @@ jobs:
         
         ### Linux
         - **AMD64 (x86_64)**: \`linux-amd64.tar.gz\`
-        - **ARM64**: \`linux-arm64.tar.gz\`
+        - **ARM64**: *Not yet supported*
         
         ### Windows  
         - **AMD64 (x86_64)**: \`windows-amd64.tar.gz\`
@@ -489,7 +447,6 @@ jobs:
         body_path: release_notes.md
         files: |
           dist/linux-amd64.tar.gz
-          dist/linux-arm64.tar.gz
           dist/windows-amd64.tar.gz
           dist/darwin-amd64.tar.gz
           dist/darwin-arm64.tar.gz
