chore: add .ansible/.lock to gitignore for Ansible lock file exclusion
  ## Additional Ansible Artifact:
  - Add .ansible/.lock to prevent Ansible lock files from being committed
  - Maintains comprehensive protection for all Ansible runtime artifacts

  ## Context:
  Ansible creates lock files during execution to prevent concurrent operations
  on the same working directory. These files should not be version controlled
  as they are temporary runtime artifacts.

  ## Consistency:
  Complements existing .ansible/ directory exclusion patterns for complete
  coverage of Ansible working directory contents.

--- a/.gitignore
+++ b/.gitignore
@@ -217,6 +217,7 @@ ansible_galaxy.log
 
 # Ansible working directories and cache (wherever they appear)
 .ansible/
+.ansible/.lock
 **/.ansible/
 ansible/logs/
 ansible/*.log
