chore: implement audit decisions for documentation and docker directories
- just_ansible.md: add reference note to comprehensive ansible/README.md
- docker/: remove empty cache and logs directories with root ownership
- .gitignore: add docker/cache/ and docker/logs/ for auto-creation by Docker
- DEAD_CODE_AUDIT.md: update with implemented resolutions

All audit items now resolved. Docker will create runtime directories
automatically, eliminating permission issues.

--- a/.gitignore
+++ b/.gitignore
@@ -175,6 +175,10 @@ certs/
 *.pfx
 *.key
 
+# Docker runtime directories (created automatically by Docker)
+docker/cache/
+docker/logs/
+
 # OS specific
 .DS_Store
 .DS_Store?
