--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -15,6 +15,7 @@ flake8>=6.1.0,<7.0.0
 pylint>=3.0.0,<4.0.0
 mypy>=1.6.0,<2.0.0
 bandit>=1.7.5,<2.0.0
+vulture>=2.11,<3.0.0
 
 # Development tools
 pre-commit>=3.5.0,<4.0.0
