--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
-[tool:pytest]
+[pytest]
 minversion = 7.0
-addopts = 
+addopts =
     --strict-markers
     --strict-config
     --verbose
@@ -14,7 +14,4 @@ markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
     integration: marks tests as integration tests
     unit: marks tests as unit tests
-filterwarnings =
-    ignore::DeprecationWarning
-    ignore::PendingDeprecationWarning
 asyncio_mode = auto
