fix: make macOS AMD64 build optional and remove from required dependencies
The macOS AMD64 (Intel) build fails due to billing/spending limits on macos-15-large runners.
Since most modern Macs are ARM64 (M1/M2/M3), make this build optional:
- Added continue-on-error: true to build-macos-amd64 job
- Removed build-macos-amd64 from release job dependencies
- Release will proceed with: Linux AMD64, Windows AMD64, macOS ARM64, Container images

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -308,6 +308,7 @@ jobs:
     name: Build macOS Binary (AMD64)
     runs-on: macos-15-large  # Intel-based runner for AMD64
     needs: test
+    continue-on-error: true  # Optional build - may fail due to billing limits
     permissions:
       contents: read
       id-token: write
@@ -555,7 +556,7 @@ jobs:
   release:
     name: Create GitHub Release
     runs-on: ubuntu-latest
-    needs: [build-linux-amd64, build-windows-amd64, build-macos-amd64, build-macos-arm64, build-container]
+    needs: [build-linux-amd64, build-windows-amd64, build-macos-arm64, build-container]
     permissions:
       contents: write
     
