--- a/pytest.ini
+++ b/pytest.ini
@@ -14,4 +14,6 @@ markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
     integration: marks tests as integration tests
     unit: marks tests as unit tests
+    e2e: marks tests as end-to-end tests (requires Docker)
+    docker: marks tests that require Docker daemon
 asyncio_mode = auto
